--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="topline row ">
         <input class="container input value" id="value1" />
 
 
